# rss-kuraaws-whatnew

./: .gitignore  Dockerfile  README.md  pyproject.toml
.github/: workflows
.github/workflow/: ci.yml
.github/workflows/: ci.yml  deploy.yml
rss_aws_whatsnew/: aws_feed.db  db.py  dynamodb.py  main.py
src/: __init__.py  dynamodb.py  main.py
tests/: test.db  test.py  test_db.py  unit_test.py
