[tool.poetry]
name = "rss-aws-whatsnew"
version = "0.1.0"
description = ""
authors = ["kuraryu <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
feedparser = "^6.0.11"
black = "^24.4.2"
flake8 = "^7.1.0"
requests = "^2.32.3"
boto3 = "^1.34.144"
moto = "^5.0.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
