[tool.poetry]
name = "rss_aws_whatsnew"
version = "0.1.0"
description = ""
authors = ["kuraryu <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
feedparser = "^6.0.11"
flake8 = "^7.1.0"
requests = "^2.32.3"
black = "^24.4.2"
moto = "^5.0.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
